kubernetes/apps/networking/ingresses/ingressRoutes/radicale/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name radicale
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radicale.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        # - name: authelia
        #   namespace: networking
      services:
        - name: *name
          port: 5232
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
